[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beamline_configuration"
version = "0.0.1"
authors = [{ name="Lucas Malin", email="lukemalin@gmail.com" }]
description = "Python class for creating dictionaries from settings YAML files"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"yaml",
	"numpy",
	"parameterized"
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/lm314/beamline-configuration"
"Bug Tracker" = "https://github.com/lm314/beamline-configuration/issues"